2019-10-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (PNMInteger): Place a generous arbitrary limit on
	the amount of PNM comment text to avoid denial of service
	opportunity.  Fixes oss-fuzz 18162 "Timeout · coder_PNM_fuzzer".

2019-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dps.c (ReadDPSImage): Fix memory leak when OpenBlob()
	reports failure.  Same as ImageMagick CVE CVE-2019-16709.

2019-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Skip
	unsupported/invalid format 0.  Fixes oss-fuzz issue 17597
	"graphicsmagick:coder_SFW_fuzzer: Heap-buffer-overflow in
	GenerateEXIFAttribute".

2019-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Change by Alex Gaynor so that the
	correct oss-fuzz fuzzing engine should be used.

2019-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/static.c (OpenModule): Static module loader should use
	upper-cased magick string when searching for a module alias.
	Fixes SourceForge issue #613 "static module loader is still
	case-sensitive".

2019-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Report status of zstd (FaceBook Zstandard)
	compression in configuration summary.

2019-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (TraceArcPath): Substitute a lineto command when
	tracing arc is impossible.  Fixes oss-fuzz 10765
	"graphicsmagick/coder_MVG_fuzzer: Divide-by-zero in TraceArcPath".

2019-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (png_read_raw_profile): Fix validation of raw
	profile length.  Fixes oss-fuzz 16906
	"graphicsmagick:coder_ICO_fuzzer: Out-of-memory in
	graphicsmagick_coder_ICO_fuzzer".

	* coders/wpg.c (ReallocColormap): Avoid dereferencing a null
	pointer if image->colormap is null.  Fixes oss-fuzz 17004
	"graphicsmagick:coder_WPG_fuzzer: Null-dereference READ in
	ReallocColormap".
