@@ -1028,7 +1028,7 @@ TIFFGetBlobSize(thandle_t image_handle)
 
 /* Unmap BLOB memory */
 static void
-TIFFUnmapBlob(thandle_t image,
+TIFFUnmapBlob(thandle_t image_handle,
               tdata_t base,
               toff_t size)
 {
@@ -1041,7 +1041,7 @@ TIFFUnmapBlob(thandle_t image,
                           "TIFF unmap blob: base=0x%p size=%" MAGICK_OFF_F "d",
                           base,(magick_off_t) size);
 #else
-  ARG_NOT_USED(image);
+  ARG_NOT_USED(image_handle);
   ARG_NOT_USED(base);
   ARG_NOT_USED(size);
 #endif  /* LOG_TIFF_BLOB_IO */
