@@ -35,6 +35,27 @@
 <div class="document">
 
 
+<p>2019-10-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/tiff.c (TIFFMapBlob): Fix compile problem if
+LOG_TIFF_BLOB_IO is defined.</li>
+<li>coders/wpg.c (ExtractPostscript): Improve performance.  Avoid
+temporary files if possible.  Avoid additional memory allocations
+if possible.  Should address oss-fuzz issue 18173
+&quot;graphicsmagick:enhance_fuzzer: Timeout in enhance_fuzzer&quot; and
+oss-fuzz issue 17714 &quot;graphicsmagick:coder_WPG_fuzzer: Timeout in
+coder_WPG_fuzzer&quot;.</li>
+</ul>
+</blockquote>
+<p>2019-10-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pnm.c (PNMInteger): Place a generous arbitrary limit on
+the amount of PNM comment text to avoid denial of service
+opportunity.  Fixes oss-fuzz 18162 &quot;Timeout · coder_PNM_fuzzer&quot;.</li>
+</ul>
+</blockquote>
 <p>2019-10-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
